# LondonDataProcessing

./: .gitignore  3GPP_UPGRADE_SUMMARY.md  FIXES_APPLIED.md  METRIC_IMPROVEMENTS.md  README.md  README_QXDM.md  check1.ipynb  delta_metrics.csv  pyproject.toml  release_metrics.csv  requirements.txt  rrc_test_sample.txt  test_qxdm.bat
notebooks/: 3gpp_complexity_lab_report_v2.ipynb
scripts/: stanage.sh
src/: Main.py  __init__.py  log_processor.py  metric_utils.py
src/ldp/: __init__.py  cli.py  config.py  embedder.py  extractor.py  main.py  metrics.py  sysmonitor.py  utils.py
test_dataset/: README_test_dataset.md  config.ini  run_test.bat  test_processor.py
test_dataset/QXDM_Logs_Sample/Highway/: highway_test_1.txt
test_dataset/QXDM_Logs_Sample/Rural/: rural_test_1.txt
test_dataset/QXDM_Logs_Sample/Urban/: urban_analysis_summary.txt  urban_test_1.txt
test_logs/Category1/: log1.txt
test_logs/Category2/: log2.txt
